Fix navigation arrow alignment and change to rem, Release 1.9.0

--- a/sass/layout/_navigation.scss
+++ b/sass/layout/_navigation.scss
@@ -56,7 +56,7 @@
               height: 10px;
               position: absolute;
               right: 12px;
-              margin-top: -1px;
+              margin-top: -.1rem;
               padding-right: .2rem;
               vertical-align: text-bottom;
             }
